--- a/clicky-app/src/components/Header/style.css
+++ b/clicky-app/src/components/Header/style.css
@@ -1,6 +1,6 @@
 .header {
     background-color: #2C323C;
-    background-image: url("/assets/images/.");
+    background-image: url("/assets/images/Stranger_Things_Logo.jpeg");
     background-repeat: repeat;
     color: white;
     min-height: 400px;
