--- a/clicky-app/src/components/Footer/style.css
+++ b/clicky-app/src/components/Footer/style.css
@@ -1,6 +1,5 @@
 .footer {
-    background: 
-    #6956AF;
+    background: red;
     height: 100px;
     position: relative;
     color: white;
@@ -12,7 +11,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background:#5138A1;
+    background:maroon;
     padding: 8px;
     font-weight: 600;
   }
